# MagamaEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp
Application/: CMakeLists.txt
Application/ImageProcessing/: CMakeLists.txt
Application/ImageProcessing/include/: IImageProcessor.h
Common/: CMakeLists.txt
Common/Exceptions/: CMakeLists.txt
Common/Exceptions/include/: MagmaException.h
Common/Logger/: CMakeLists.txt
Common/Logger/include/: CommonLogger.h
Common/Logger/src/: CommonLogger.cpp
Doc/: CMake架构.md  CMake配置流程.md
Domain/: CMakeLists.txt
Domain/Entities/: CMakeLists.txt
Domain/Entities/include/: Pokemon.h
Infrastructure/: CMakeLists.txt
Infrastructure/AssetOpenCV/: CMakeLists.txt
Infrastructure/AssetOpenCV/include/: OpenCVImageProcessor.h
Infrastructure/AssetOpenCV/src/: OpenCVImageProcessor.cpp
UI/: CMakeLists.txt
UI/InterfaceAdapters/: CMakeLists.txt
UI/Widgets/MainWindow/include/: MainWindow.h
UI/Widgets/MainWindow/src/: MainWindow.cpp
UI/Widgets/MainWindow/ui/: MainWindow.ui
UI/Widgets/Tools/include/: ImageMattingPage.h
UI/Widgets/Tools/src/: ImageMattingPage.cpp
UI/Widgets/Tools/ui/: ImageMattingPage.ui
